# wrix

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  config.toml  flake.nix  loom.toml
.beads/: config.yaml  (+1 more)
crates/wrix-cache/: Cargo.toml
crates/wrix-cache/src/: lib.rs
crates/wrix-cache/src/command/: mod.rs
crates/wrix-cache/src/helper/: mod.rs
crates/wrix-cache/src/publisher/: mod.rs
crates/wrix-cache/tests/: helper_server.rs  hook.rs  publisher.rs
crates/wrix-cli/: Cargo.toml
crates/wrix-cli/src/: init.rs  lib.rs  main.rs  sign.rs
crates/wrix-cli/src/command/: mod.rs
crates/wrix-cli/tests/: cli_surface.rs  init_config.rs  init_deploy.rs  init_fixture.rs  init_git_bootstrap.rs  init_prek.rs  init_signing.rs  init_verify.rs
crates/wrix-cli/tests/common/: mod.rs
crates/wrix-sandbox/: Cargo.toml
crates/wrix-sandbox/src/: image.rs  lib.rs
crates/wrix-sandbox/src/command/: config.rs  launch.rs  mod.rs
crates/wrix-sandbox/tests/: command.rs  darwin_mounts.rs  image_install.rs  image_retention.rs  launch.rs  project_cache.rs  spawn_config.rs
crates/wrix-sandbox/tests/common/: mod.rs
crates/wrix-service/: Cargo.toml
crates/wrix-service/src/: lib.rs
crates/wrix-service/src/command/: mod.rs
crates/wrix-service/src/lifecycle/: mod.rs
crates/wrix-service/tests/: cache_state.rs  command_surface.rs  lifecycle.rs
lib/mcp/tmux/tmux-mcp/: Cargo.toml
lib/mcp/tmux/tmux-mcp/src/: audit.rs  main.rs  mcp.rs  pane.rs  panes.rs  tmux.rs
loom/: Cargo.toml  clippy.toml
loom/crates/loom/: Cargo.toml
loom/crates/loom-agent/: Cargo.toml
loom/crates/loom-agent/src/: lib.rs
loom/crates/loom-agent/src/claude/: backend.rs  messages.rs  mod.rs  parser.rs
loom/crates/loom-agent/src/direct/: backend.rs  mod.rs  tools.rs
loom/crates/loom-agent/src/pi/: backend.rs  messages.rs  mod.rs  parser.rs
loom/crates/loom-agent/tests/: properties.rs  static_dispatch.rs
loom/crates/loom-core/: Cargo.toml
loom/crates/loom-core/src/: lib.rs  scratch.rs  testing.rs
loom/crates/loom-core/src/agent/: backend.rs  error.rs  event.rs  kind.rs  mod.rs  ndjson.rs  parse.rs  repin.rs  session.rs
loom/crates/loom-core/src/bd/: client.rs  error.rs  label.rs  mod.rs  models.rs  runner.rs
loom/crates/loom-core/src/clock/: mock.rs  mod.rs  system.rs
loom/crates/loom-core/src/config/: agent.rs  exit_signals.rs  mod.rs
loom/crates/loom-core/src/git/: client.rs  error.rs  mod.rs
loom/crates/loom-core/src/identifier/: bead.rs  mod.rs  molecule.rs  profile.rs  request.rs  session.rs  spec.rs  tool_call.rs
loom/crates/loom-core/src/lock/: error.rs  manager.rs  mod.rs
loom/crates/loom-core/src/logging/: mod.rs  path.rs  redacted.rs  renderer.rs  retention.rs  sink.rs  time.rs
loom/crates/loom-core/src/profile_manifest/: error.rs
loom/crates/loom-core/src/state/: companions.rs  db.rs  error.rs  implementation_notes.rs  mod.rs  rebuild.rs
loom/crates/loom-core/tests/: git_client.rs  lock_manager.rs  logging.rs  properties.rs  state_db.rs
loom/crates/loom-direct-runner/: Cargo.toml
loom/crates/loom-direct-runner/src/: lib.rs  main.rs
loom/crates/loom-driver/: Cargo.toml
loom/crates/loom-driver/src/: lib.rs  markdown.rs  scratch.rs  testing.rs
loom/crates/loom-driver/src/agent/: backend.rs  error.rs  event.rs  jsonl.rs  mod.rs  parse.rs  repin.rs  session.rs
loom/crates/loom-driver/src/bd/: client.rs  label.rs  models.rs
loom/crates/loom-driver/src/clock/: mock.rs  mod.rs  system.rs
loom/crates/loom-driver/src/config/: agent.rs  agent_observer.rs  beads.rs  claude.rs  error.rs  logs.rs  loop_config.rs  mod.rs  runner.rs  security.rs
loom/crates/loom-driver/src/git/: client.rs
loom/crates/loom-driver/src/identifier/: bead.rs
loom/crates/loom-driver/src/lock/: error.rs  manager.rs
loom/crates/loom-driver/src/logging/: mod.rs  path.rs  redacted.rs  retention.rs  sink.rs  time.rs
loom/crates/loom-driver/src/profile_manifest/: manifest.rs  mod.rs
loom/crates/loom-driver/src/state/: companions.rs  db.rs  error.rs  migrate.rs  mod.rs  rebuild.rs
loom/crates/loom-driver/tests/: git_client.rs  lock_manager.rs  logging.rs  properties.rs  state_db.rs
loom/crates/loom-events/: Cargo.toml
loom/crates/loom-events/src/: event.rs  lib.rs
loom/crates/loom-events/src/identifier/: bead.rs  molecule.rs  profile.rs  request.rs  session.rs  spec.rs  tool_call.rs
loom/crates/loom-gate/: Cargo.toml
loom/crates/loom-gate/src/: annotation.rs  cache.rs  dispatch.rs  error.rs  inputs.rs  integrity.rs  lib.rs  runner.rs  scope.rs
loom/crates/loom-gate/tests/: annotation_parse.rs  cache.rs  dispatch.rs  inputs.rs  integrity.rs  scope.rs
loom/crates/loom-llm/: Cargo.toml
loom/crates/loom-llm/src/: cache.rs  client.rs  conversation.rs  lib.rs  model_id.rs  request.rs  tool.rs  usage.rs
loom/crates/loom-llm/src/client/: mod.rs  multi_provider.rs
loom/crates/loom-render/: Cargo.toml
loom/crates/loom-render/src/: clock.rs  in_place.rs  lib.rs  osc8.rs  path.rs  redacted.rs  renderer.rs  time.rs  tool_body.rs
loom/crates/loom-templates/: Cargo.toml
loom/crates/loom-templates/src/: lib.rs  previous_failure.rs
loom/crates/loom-templates/templates/: check.md  msg.md  plan_new.md  plan_update.md  review.md  run.md  todo_new.md  todo_update.md
loom/crates/loom-templates/tests/: public_contract.rs  render.rs  snapshots.rs
loom/crates/loom-test-support/: Cargo.toml
loom/crates/loom-test-support/src/: lib.rs
loom/crates/loom-walk/: Cargo.toml
loom/crates/loom-walk/src/: main.rs
loom/crates/loom-walk/tests/: fixture.rs
loom/crates/loom-workflow/: Cargo.toml
loom/crates/loom-workflow/src/: agent.rs  doctor.rs  lib.rs  logs_cmd.rs  observer.rs  status.rs  use_spec.rs
loom/crates/loom-workflow/tests/: parallel.rs  todo_production.rs
loom/crates/loom/src/: main.rs
loom/crates/loom/tests/: agent_flag.rs  annotations.rs  cli_help.rs  envelope_stamp.rs  gate_integrity.rs  marker_gate.rs  msg_chat.rs  msg_persist.rs  nested_loom_guard.rs  push_gate.rs  render_flags.rs  run_smoke.rs  spawn_dispatch.rs  style.rs
(+571 files in other folders)
