[workspace]
members = [
  "crates/wrix-beads",
  "crates/wrix-cache",
  "crates/wrix-cli",
  "crates/wrix-core",
  "crates/wrix-sandbox",
  "crates/wrix-service",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.metadata.crane]
name = "wrix"

[workspace.dependencies]
wrix-beads = { path = "crates/wrix-beads" }
wrix-cache = { path = "crates/wrix-cache" }
wrix-core = { path = "crates/wrix-core" }
wrix-sandbox = { path = "crates/wrix-sandbox" }
wrix-service = { path = "crates/wrix-service" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "warn"
expect_used = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
significant_drop_tightening = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
use_self = "allow"
