[package]
name = "wrix-cache"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
displaydoc = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wrix-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "wrix-cache-hook"
path = "src/bin/wrix-cache-hook.rs"

[[bin]]
name = "wrix-cache-publish"
path = "src/bin/wrix-cache-publish.rs"

[[bin]]
name = "wrix-cache-serve"
path = "src/bin/wrix-cache-serve.rs"

[lints]
workspace = true
