[package]
name = "wrix-sandbox"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
displaydoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wrix-core = { workspace = true }

[lints]
workspace = true
