[package]
name = "wrix-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
displaydoc = { workspace = true }
thiserror = { workspace = true }
wrix-cache = { workspace = true }
wrix-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wrix-cli = { workspace = true }

[lints]
workspace = true
