[package]
name = "wrix-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
displaydoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wrix-cache = { workspace = true }
wrix-core = { workspace = true }
wrix-sandbox = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wrix-cli = { workspace = true }

[lints]
workspace = true
