[package]
name = "loom-agent"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
displaydoc = { workspace = true }
loom-core = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
