[package]
name = "loom-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
gix = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
