[package]
name = "loom-direct-runner"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

# In-container Direct entrypoint. Reads JSONL command frames from stdin,
# drives a `loom-llm::Conversation` registered with `loom-agent`'s six
# sandbox-aware tools, and emits `DirectEvent` JSONL frames to stdout for
# the host-side `loom-agent::direct::backend::DirectParser` to decode.
[[bin]]
name = "loom-direct-runner"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
displaydoc = { workspace = true }
loom-agent = { workspace = true }
loom-driver = { workspace = true }
loom-events = { workspace = true }
loom-llm = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
