[package]
name = "loom-templates"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
askama = { workspace = true }
loom-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
