[package]
name = "loom-walk"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

# Binary crate hosting this repo's `[check]`-tier source walks. Each
# walk is a function in `src/walk/<name>.rs`; the binary dispatches by
# the positional argument under the verifier-runner contract in
# `specs/loom-gate.md`.
[dependencies]
displaydoc = { workspace = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
