[package]
name = "loom-workflow"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
askama = { workspace = true }
loom-core = { workspace = true }
loom-templates = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
