[package]
name = "loom-workflow"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
askama = { workspace = true }
loom-driver = { workspace = true }
loom-events = { workspace = true }
loom-gate = { workspace = true }
loom-llm = { workspace = true }
loom-render = { workspace = true }
loom-templates = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
loom-test-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
