[package]
name = "loom"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
loom-agent = { workspace = true }
loom-core = { workspace = true }
loom-workflow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
