[package]
name = "loom"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "loom"
path = "src/main.rs"

[[bin]]
name = "bd-shim"
path = "src/bin/bd-shim.rs"

[[bin]]
name = "mock-loom-agent"
path = "src/bin/mock-loom-agent.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
loom-agent = { workspace = true }
loom-driver = { workspace = true }
loom-events = { workspace = true }
loom-render = { workspace = true }
loom-workflow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
loom-test-support = { workspace = true }
nix = { workspace = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde_json = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
